Fixed the position of my boxes and aligned my h2

--- a/First-page-styles.css
+++ b/First-page-styles.css
@@ -9,6 +9,8 @@ body {
     padding: var(--spacing-sm) 0 0 0;
     justify-content: center;
     align-items: center;
+    display: inline-flex;
+    text-align: center;
   }
   
 
@@ -47,8 +49,14 @@ h1 {
 h2 {
   color: #CF9FFF;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  font-size: 30px;
+  font-size: 40px;
   margin: auto; 
+  justify-content: center;
+  font-family: caveat;;
+   animation-name: spin;
+  animation-duration: 1s;
+   display: inline-block;
+  animation-iteration-count: infinite;
 }
 
 button {
@@ -246,7 +254,7 @@ html {
 }
 
 .feature-projects {
-  display: grid;
+  display: block;
   grid-template-columns: 300px auto;
   width: 100vw;
   padding: 20px;
@@ -258,7 +266,7 @@ html {
 }
 
 .box {
-  position: relative;
+ /* position: relative;*/
   width: 300px;
   height: 300px;
   /*display: flex;*/
@@ -268,6 +276,8 @@ html {
   /*border: 20px solid #222;*/
   margin: 30px;
   transition: 0.5s;
+  margin-left: 100px;
+  margin-top: 100px;
 }
 
 .box:hover {
@@ -426,6 +436,7 @@ ul {
   margin-inline-end: 0px;
   padding-inline-start: 40px;
 }
+
 
 
 
